--- a/OMDb API.ipynb
+++ b/OMDb API.ipynb
@@ -2,17 +2,280 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'43b8d062'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Dependencies\n",
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#from config import api_key\n",
-    "#from pprint import pprint"
+    "from config import api_key\n",
+    "from pprint import pprint\n",
+    "#api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: Expected 2 fields in line 8, saw 3\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-0c976a0b431b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmovies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Marvel movies.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"ISO-8859-1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmovies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    686\u001b[0m     )\n\u001b[1;32m    687\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 688\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    689\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    458\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    459\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 460\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    461\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    462\u001b[0m         \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1196\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1197\u001b[0m         \u001b[0mnrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_validate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nrows\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1198\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1200\u001b[0m         \u001b[0;31m# May alter columns / col_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.8/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   2155\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2156\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2157\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2158\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2159\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_first_chunk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_low_memory\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 2 fields in line 8, saw 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies = pd.read_csv(\"Marvel movies.csv\", encoding = \"ISO-8859-1\")\n",
+    "movies.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OMDb api key\n",
+    "url = f\"http://www.omdbapi.com/?apikey={api_key}&t=\"\n",
+    "responses = []\n",
+    "movie_list = [\"X-Men\", \"Spider-Man\", \"Iron Man\", \"Thor\"]\n",
+    "\n",
+    "# for movie in movie_list:\n",
+    "# response = requests.get(url + \"Marvel\").json()\n",
+    "for movie in movie_list:\n",
+    "    movie_data = requests.get(url + movie).json()\n",
+    "    responses.append(movie_data)\n",
+    "    responses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Rated</th>\n",
+       "      <th>Released</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Writer</th>\n",
+       "      <th>Actors</th>\n",
+       "      <th>Plot</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "      <th>imdbID</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>DVD</th>\n",
+       "      <th>BoxOffice</th>\n",
+       "      <th>Production</th>\n",
+       "      <th>Website</th>\n",
+       "      <th>Response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>X-Men</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>14 Jul 2000</td>\n",
+       "      <td>104 min</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>Bryan Singer</td>\n",
+       "      <td>Tom DeSanto (story), Bryan Singer (story), Dav...</td>\n",
+       "      <td>Hugh Jackman, Patrick Stewart, Ian McKellen, F...</td>\n",
+       "      <td>In a world where mutants (evolved super-powere...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>567,321</td>\n",
+       "      <td>tt0120903</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>$157,299,718</td>\n",
+       "      <td>Twentieth Century Fox, Genetics Productions, B...</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>03 May 2002</td>\n",
+       "      <td>121 min</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>Sam Raimi</td>\n",
+       "      <td>Stan Lee (Marvel comic book), Steve Ditko (Mar...</td>\n",
+       "      <td>Tobey Maguire, Willem Dafoe, Kirsten Dunst, Ja...</td>\n",
+       "      <td>When bitten by a genetically modified spider, ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>683,012</td>\n",
+       "      <td>tt0145487</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>$407,022,860</td>\n",
+       "      <td>Marvel Films, Laura Ziskin Productions</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>02 May 2008</td>\n",
+       "      <td>126 min</td>\n",
+       "      <td>Action, Adventure, Sci-Fi</td>\n",
+       "      <td>Jon Favreau</td>\n",
+       "      <td>Mark Fergus (screenplay), Hawk Ostby (screenpl...</td>\n",
+       "      <td>Robert Downey Jr., Terrence Howard, Jeff Bridg...</td>\n",
+       "      <td>After being held captive in an Afghan cave, bi...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>79</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>930,966</td>\n",
+       "      <td>tt0371746</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>Marvel Enterprises, Paramount</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thor</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>06 May 2011</td>\n",
+       "      <td>115 min</td>\n",
+       "      <td>Action, Adventure, Fantasy</td>\n",
+       "      <td>Kenneth Branagh</td>\n",
+       "      <td>Ashley Miller (screenplay), Zack Stentz (scree...</td>\n",
+       "      <td>Chris Hemsworth, Natalie Portman, Tom Hiddlest...</td>\n",
+       "      <td>The powerful but arrogant god Thor is cast out...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>740,509</td>\n",
+       "      <td>tt0800369</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>$181,030,624</td>\n",
+       "      <td>Marvel Studios</td>\n",
+       "      <td>N/A</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Title  Year  Rated     Released  Runtime                       Genre  \\\n",
+       "0       X-Men  2000  PG-13  14 Jul 2000  104 min   Action, Adventure, Sci-Fi   \n",
+       "1  Spider-Man  2002  PG-13  03 May 2002  121 min   Action, Adventure, Sci-Fi   \n",
+       "2    Iron Man  2008  PG-13  02 May 2008  126 min   Action, Adventure, Sci-Fi   \n",
+       "3        Thor  2011  PG-13  06 May 2011  115 min  Action, Adventure, Fantasy   \n",
+       "\n",
+       "          Director                                             Writer  \\\n",
+       "0     Bryan Singer  Tom DeSanto (story), Bryan Singer (story), Dav...   \n",
+       "1        Sam Raimi  Stan Lee (Marvel comic book), Steve Ditko (Mar...   \n",
+       "2      Jon Favreau  Mark Fergus (screenplay), Hawk Ostby (screenpl...   \n",
+       "3  Kenneth Branagh  Ashley Miller (screenplay), Zack Stentz (scree...   \n",
+       "\n",
+       "                                              Actors  \\\n",
+       "0  Hugh Jackman, Patrick Stewart, Ian McKellen, F...   \n",
+       "1  Tobey Maguire, Willem Dafoe, Kirsten Dunst, Ja...   \n",
+       "2  Robert Downey Jr., Terrence Howard, Jeff Bridg...   \n",
+       "3  Chris Hemsworth, Natalie Portman, Tom Hiddlest...   \n",
+       "\n",
+       "                                                Plot  ... Metascore  \\\n",
+       "0  In a world where mutants (evolved super-powere...  ...        64   \n",
+       "1  When bitten by a genetically modified spider, ...  ...        73   \n",
+       "2  After being held captive in an Afghan cave, bi...  ...        79   \n",
+       "3  The powerful but arrogant god Thor is cast out...  ...        57   \n",
+       "\n",
+       "  imdbRating imdbVotes     imdbID   Type  DVD     BoxOffice  \\\n",
+       "0        7.4   567,321  tt0120903  movie  N/A  $157,299,718   \n",
+       "1        7.3   683,012  tt0145487  movie  N/A  $407,022,860   \n",
+       "2        7.9   930,966  tt0371746  movie  N/A           N/A   \n",
+       "3        7.0   740,509  tt0800369  movie  N/A  $181,030,624   \n",
+       "\n",
+       "                                          Production Website Response  \n",
+       "0  Twentieth Century Fox, Genetics Productions, B...     N/A     True  \n",
+       "1             Marvel Films, Laura Ziskin Productions     N/A     True  \n",
+       "2                      Marvel Enterprises, Paramount     N/A     True  \n",
+       "3                                     Marvel Studios     N/A     True  \n",
+       "\n",
+       "[4 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_df = pd.DataFrame(responses)\n",
+    "movie_df"
    ]
   },
   {
@@ -20,11 +283,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#api key\n",
-    "# url = \"http://www.omdbapi.com/?t=\"\n",
-    "# api_key = \"&apikey=\" + api_key"
-   ]
+   "source": []
   }
  ],
  "metadata": {
