--- a/MarvelAPI.ipynb
+++ b/MarvelAPI.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -246,94 +246,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>116</td>\n",
-       "      <td>Acts of Vengeance!</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>227</td>\n",
-       "      <td>Age of Apocalypse</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>314</td>\n",
-       "      <td>Age of Ultron</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>303</td>\n",
-       "      <td>Age of X</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>329</td>\n",
        "      <td>All-New All-Different Marvel</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>10</th>\n",
+       "      <td>322</td>\n",
+       "      <td>Avengers NOW!</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>316</td>\n",
-       "      <td>X-Men: Battle of the Atom</td>\n",
-       "      <td>24</td>\n",
+       "      <th>16</th>\n",
+       "      <td>330</td>\n",
+       "      <td>Civil War II</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>308</td>\n",
-       "      <td>X-Men: Regenesis</td>\n",
-       "      <td>46</td>\n",
+       "      <th>31</th>\n",
+       "      <td>253</td>\n",
+       "      <td>Infinity Gauntlet</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>306</td>\n",
-       "      <td>X-Men: Schism</td>\n",
-       "      <td>19</td>\n",
+       "      <th>36</th>\n",
+       "      <td>328</td>\n",
+       "      <td>James Patterson's Max Ride</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>279</td>\n",
-       "      <td>X-Men: Second Coming</td>\n",
-       "      <td>31</td>\n",
+       "      <th>51</th>\n",
+       "      <td>304</td>\n",
+       "      <td>Point One</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>280</td>\n",
-       "      <td>X-Tinction Agenda</td>\n",
-       "      <td>22</td>\n",
+       "      <th>64</th>\n",
+       "      <td>327</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>74 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    Event #                   Event Title  # Chars in Event\n",
-       "0       116            Acts of Vengeance!               103\n",
-       "1       227             Age of Apocalypse                91\n",
-       "2       314                 Age of Ultron                14\n",
-       "3       303                      Age of X                45\n",
        "4       329  All-New All-Different Marvel                 0\n",
-       "..      ...                           ...               ...\n",
-       "69      316     X-Men: Battle of the Atom                24\n",
-       "70      308              X-Men: Regenesis                46\n",
-       "71      306                 X-Men: Schism                19\n",
-       "72      279          X-Men: Second Coming                31\n",
-       "73      280             X-Tinction Agenda                22\n",
-       "\n",
-       "[74 rows x 3 columns]"
+       "10      322                 Avengers NOW!                 0\n",
+       "16      330                  Civil War II                 0\n",
+       "31      253             Infinity Gauntlet                 0\n",
+       "36      328    James Patterson's Max Ride                 0\n",
+       "51      304                     Point One                 0\n",
+       "64      327                     Star Wars                 0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +311,8 @@
     "EventInfo = pd.DataFrame({\"Event #\": eventid,\n",
     "                        \"Event Title\": eventname,\n",
     "                        \"# Chars in Event\": charcount})\n",
-    "EventInfo"
+    "EventInfo.to_csv(\"marvel_files/EventInfo.csv\")\n",
+    "EventInfo.loc[EventInfo[\"# Chars in Event\"]==0]"
    ]
   },
   {
@@ -372,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +366,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>ID</th>\n",
+       "      <th>CharName</th>\n",
+       "      <th>CharID</th>\n",
        "      <th>Event</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -474,7 +444,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                             Name       ID  Event\n",
+       "                         CharName   CharID  Event\n",
        "0                  Alicia Masters  1009435    116\n",
        "1                    Alpha Flight  1010370    116\n",
        "2                     Ancient One  1009152    116\n",
@@ -490,24 +460,285 @@
        "[2621 rows x 3 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CharacterList = pd.DataFrame({\"Name\": charnameByE,\n",
-    "                             \"ID\": charidByE,\n",
+    "CharacterList = pd.DataFrame({\"CharName\": charnameByE,\n",
+    "                             \"CharID\": charidByE,\n",
     "                             \"Event\": charevent})\n",
-    "CharacterList"
+    "CharacterList.to_csv(\"marvel_files/CharacterList.csv\")\n",
+    "CharacterList\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CharName</th>\n",
+       "      <th>CharID</th>\n",
+       "      <th>Event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>483</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>553</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>617</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>770</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>900</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>988</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1059</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1174</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1220</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1266</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1340</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1509</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1709</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1780</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1805</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1878</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1966</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2052</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2123</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2173</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2203</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2256</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2332</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2435</th>\n",
+       "      <td>Iron Man</td>\n",
+       "      <td>1009368</td>\n",
+       "      <td>277</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CharName   CharID  Event\n",
+       "46    Iron Man  1009368    116\n",
+       "228   Iron Man  1009368    303\n",
+       "307   Iron Man  1009368    231\n",
+       "331   Iron Man  1009368    233\n",
+       "370   Iron Man  1009368    234\n",
+       "398   Iron Man  1009368    310\n",
+       "483   Iron Man  1009368    296\n",
+       "553   Iron Man  1009368    238\n",
+       "617   Iron Man  1009368    239\n",
+       "683   Iron Man  1009368    318\n",
+       "770   Iron Man  1009368    245\n",
+       "900   Iron Man  1009368    249\n",
+       "988   Iron Man  1009368    302\n",
+       "1059  Iron Man  1009368    251\n",
+       "1174  Iron Man  1009368    315\n",
+       "1220  Iron Man  1009368     29\n",
+       "1266  Iron Man  1009368    317\n",
+       "1340  Iron Man  1009368    255\n",
+       "1509  Iron Man  1009368     37\n",
+       "1709  Iron Man  1009368    154\n",
+       "1780  Iron Man  1009368    319\n",
+       "1805  Iron Man  1009368    266\n",
+       "1878  Iron Man  1009368    336\n",
+       "1966  Iron Man  1009368    269\n",
+       "2052  Iron Man  1009368    270\n",
+       "2123  Iron Man  1009368    271\n",
+       "2173  Iron Man  1009368     59\n",
+       "2203  Iron Man  1009368    309\n",
+       "2256  Iron Man  1009368    273\n",
+       "2332  Iron Man  1009368    305\n",
+       "2435  Iron Man  1009368    277"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IronList = CharacterList.loc[(CharacterList[\"CharName\"] == \"Iron Man\")]\n",
+    "IronList"
+   ]
   },
   {
    "cell_type": "code",
