Set up code to test intersectionality of characters in events

--- a/MarvelAPI.ipynb
+++ b/MarvelAPI.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -501,22 +501,42 @@
        "[2720 rows x 3 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CharacterList = pd.DataFrame({\"CharName\": charnameByE,\n",
+    "CharData = pd.DataFrame({\"CharName\": charnameByE,\n",
     "                             \"CharID\": charidByE,\n",
     "                             \"Event\": charevent})\n",
-    "CharacterList.to_csv(\"marvel_files/CharacterList.csv\")\n",
-    "CharacterList\n"
+    "CharData.to_csv(\"marvel_files/CharData.csv\")\n",
+    "CharData\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "662\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get list of characters\n",
+    "CharList = CharData[\"CharName\"].unique()\n",
+    "# Print the amount of number of characters that exist\n",
+    "print(len(CharList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -547,239 +567,411 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>84</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
-       "      <td>303</td>\n",
+       "      <th>203</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>310</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
-       "      <td>231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>334</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>353</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>376</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>401</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>419</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>486</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>501</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>556</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>595</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>621</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
-       "      <td>239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>687</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>738</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>818</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>796</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>811</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>822</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
-       "      <td>249</td>\n",
+       "      <th>867</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1036</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1100</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1158</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1184</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1273</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1247</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1284</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1319</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1365</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1379</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1439</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1467</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1608</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1531</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1579</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1634</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1808</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1715</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1725</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1844</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1879</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1887</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1904</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>1910</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1977</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2003</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2065</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2100</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2151</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2172</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2222</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2250</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2272</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2281</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2302</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2323</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2355</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2382</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2431</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2407</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2534</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>1009368</td>\n",
+       "      <th>2459</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2550</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
        "      <td>277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2573</th>\n",
+       "      <td>Spider-Man</td>\n",
+       "      <td>1009610</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CharName   CharID  Event\n",
-       "46    Iron Man  1009368    116\n",
-       "231   Iron Man  1009368    303\n",
-       "310   Iron Man  1009368    231\n",
-       "334   Iron Man  1009368    233\n",
-       "373   Iron Man  1009368    234\n",
-       "401   Iron Man  1009368    310\n",
-       "486   Iron Man  1009368    296\n",
-       "556   Iron Man  1009368    238\n",
-       "621   Iron Man  1009368    239\n",
-       "687   Iron Man  1009368    318\n",
-       "818   Iron Man  1009368    245\n",
-       "948   Iron Man  1009368    249\n",
-       "1036  Iron Man  1009368    302\n",
-       "1158  Iron Man  1009368    251\n",
-       "1273  Iron Man  1009368    315\n",
-       "1319  Iron Man  1009368     29\n",
-       "1365  Iron Man  1009368    317\n",
-       "1439  Iron Man  1009368    255\n",
-       "1608  Iron Man  1009368     37\n",
-       "1808  Iron Man  1009368    154\n",
-       "1879  Iron Man  1009368    319\n",
-       "1904  Iron Man  1009368    266\n",
-       "1977  Iron Man  1009368    336\n",
-       "2065  Iron Man  1009368    269\n",
-       "2151  Iron Man  1009368    270\n",
-       "2222  Iron Man  1009368    271\n",
-       "2272  Iron Man  1009368     59\n",
-       "2302  Iron Man  1009368    309\n",
-       "2355  Iron Man  1009368    273\n",
-       "2431  Iron Man  1009368    305\n",
-       "2534  Iron Man  1009368    277"
+       "        CharName   CharID  Event\n",
+       "84    Spider-Man  1009610    116\n",
+       "203   Spider-Man  1009610    314\n",
+       "353   Spider-Man  1009610    233\n",
+       "376   Spider-Man  1009610    234\n",
+       "419   Spider-Man  1009610    310\n",
+       "501   Spider-Man  1009610    296\n",
+       "595   Spider-Man  1009610    238\n",
+       "738   Spider-Man  1009610    318\n",
+       "796   Spider-Man  1009610    240\n",
+       "811   Spider-Man  1009610    332\n",
+       "822   Spider-Man  1009610    245\n",
+       "867   Spider-Man  1009610    246\n",
+       "1100  Spider-Man  1009610    302\n",
+       "1184  Spider-Man  1009610    251\n",
+       "1247  Spider-Man  1009610    252\n",
+       "1284  Spider-Man  1009610    315\n",
+       "1379  Spider-Man  1009610    317\n",
+       "1467  Spider-Man  1009610    255\n",
+       "1531  Spider-Man  1009610    258\n",
+       "1579  Spider-Man  1009610    151\n",
+       "1634  Spider-Man  1009610     37\n",
+       "1715  Spider-Man  1009610    337\n",
+       "1725  Spider-Man  1009610    333\n",
+       "1844  Spider-Man  1009610    154\n",
+       "1887  Spider-Man  1009610    319\n",
+       "1910  Spider-Man  1009610    266\n",
+       "2003  Spider-Man  1009610    336\n",
+       "2100  Spider-Man  1009610    269\n",
+       "2172  Spider-Man  1009610    270\n",
+       "2250  Spider-Man  1009610    271\n",
+       "2281  Spider-Man  1009610     59\n",
+       "2323  Spider-Man  1009610    309\n",
+       "2382  Spider-Man  1009610    273\n",
+       "2407  Spider-Man  1009610    219\n",
+       "2446  Spider-Man  1009610    305\n",
+       "2459  Spider-Man  1009610    321\n",
+       "2550  Spider-Man  1009610    277\n",
+       "2573  Spider-Man  1009610     60"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IronList = CharacterList.loc[(CharacterList[\"CharName\"] == \"Iron Man\")]\n",
+    "# Create DF for events IronMan is in\n",
+    "IronList = CharData.loc[(CharacterList[\"CharName\"] == \"Spider-Man\")]\n",
     "IronList"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iron Man and Spider-Man are both in these events: [266, 269, 270, 271, 273, 277, 154, 37, 296, 302, 305, 309, 310, 59, 315, 317, 318, 319, 336, 233, 234, 238, 116, 245, 251, 255]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Better - create \"set\" of events Iron Man and Spider-Man are in, get union of those events\n",
+    "IronEvents = set(CharData.loc[(CharData[\"CharName\"]==\"Iron Man\"),\"Event\"])\n",
+    "SpiderEvents = set(CharData.loc[(CharData[\"CharName\"]==\"Spider-Man\"),\"Event\"])\n",
+    "IronEvents\n",
+    "SpiderEvents\n",
+    "print(f'Iron Man and Spider-Man are both in these events: {list(IronEvents.intersection(SpiderEvents))}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{266, 269, 270, 271, 273, 277, 154, 37, 296, 302, 305, 309, 310, 59, 315, 317, 318, 319, 336, 233, 234, 238, 116, 245, 251, 255}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Can we create sets for all 662 characters?\n",
+    "CharDict = {}\n",
+    "for x in CharList:\n",
+    "    CharDict['%sEv' % x] = [CharData.loc[(CharData[\"CharName\"]==x),\"Event\"]]\n",
+    "\n",
+    "\n",
+    "#View one character's dictionary\n",
+    "CharDict[\"StormEv\"]\n",
+    "#This transforms the single character in the dictionary to a list, then a set. Can use to perform intersections \n",
+    "CharA = set(list(CharDict[\"Spider-ManEv\"][0]))\n",
+    "CharB = set(list(CharDict[\"Iron ManEv\"][0]))\n",
+    "print(CharA.intersection(CharB))\n",
+    "\n",
+    "# This step isn't necessary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{29,\n",
+       " 37,\n",
+       " 116,\n",
+       " 154,\n",
+       " 227,\n",
+       " 233,\n",
+       " 238,\n",
+       " 240,\n",
+       " 245,\n",
+       " 246,\n",
+       " 248,\n",
+       " 249,\n",
+       " 251,\n",
+       " 252,\n",
+       " 255,\n",
+       " 263,\n",
+       " 269,\n",
+       " 270,\n",
+       " 271,\n",
+       " 279,\n",
+       " 280,\n",
+       " 299,\n",
+       " 303,\n",
+       " 305,\n",
+       " 308,\n",
+       " 310,\n",
+       " 316,\n",
+       " 318,\n",
+       " 334,\n",
+       " 336}"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can use Global variables and add the set/list/[0] into the loop. Global variables have risks\n",
+    "for x in CharList:\n",
+    "    globals()['set%s' % x] = set(list([CharData.loc[(CharData[\"CharName\"]==x),\"Event\"]][0]))\n",
+    "\n",
+    "\n",
+    "setStorm\n",
+    "#setIron Man\n",
+    "# DONT USE. We can't use this; any character with a space will not form a usable variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
