created combined DF holding the top 8 events and a column listing each of the top 10 characters in those events

--- a/MarvelAPI.ipynb
+++ b/MarvelAPI.ipynb
@@ -1666,6 +1666,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[238, 238, 238, 238, 238, 238, 238, 302, 302, 302, 302, 302, 302, 302, 302, 302, 315, 315, 315, 315, 315, 315, 317, 317, 317, 37, 37, 37, 37, 37, 37, 37, 319, 266, 266, 269, 269, 269, 269, 269, 269, 269]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop to list top chars in event\n",
+    "Top10Names = [\"Hawkeye\",\"Luke Cage\",\"Spider-Woman (Jessica Drew)\", \"She-Hulk (Jennifer Walters)\", \"Namor\",\"Scarlet Witch\", \"Tigra (Greer Nelson)\", \"Wasp\",  \"Hercules\", \"Vision\"]\n",
+    "Top8Events = EightEvent[\"Event #\"]\n",
+    "namelist = []\n",
+    "eventlist = []\n",
+    "for x in range(len(Top8Events)):\n",
+    "    for y in range(len(Top10Names)):\n",
+    "        if Top8Events[x] in Top10Sets[y]:\n",
+    "            eventlist.append(Top8Events[x])\n",
+    "            namelist.append(Top10Names[y])\n",
+    "print(eventlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Luke Cage', 'Spider-Woman (Jessica Drew)', 'She-Hulk (Jennifer Walters)', 'Namor', 'Tigra (Greer Nelson)', 'Wasp', 'Vision'], ['Hawkeye', 'Luke Cage', 'Spider-Woman (Jessica Drew)', 'She-Hulk (Jennifer Walters)', 'Namor', 'Tigra (Greer Nelson)', 'Wasp', 'Hercules', 'Vision'], ['Hawkeye', 'Luke Cage', 'Spider-Woman (Jessica Drew)', 'Namor', 'Scarlet Witch', 'Wasp'], ['Luke Cage', 'Spider-Woman (Jessica Drew)', 'Namor'], ['Hawkeye', 'She-Hulk (Jennifer Walters)', 'Scarlet Witch', 'Tigra (Greer Nelson)', 'Wasp', 'Hercules', 'Vision'], ['Scarlet Witch'], ['Luke Cage', 'Spider-Woman (Jessica Drew)'], ['Luke Cage', 'Spider-Woman (Jessica Drew)', 'She-Hulk (Jennifer Walters)', 'Namor', 'Tigra (Greer Nelson)', 'Wasp', 'Hercules']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Event #</th>\n",
+       "      <th>Event Title</th>\n",
+       "      <th>Event Description</th>\n",
+       "      <th># Chars in Event</th>\n",
+       "      <th>Top Chars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>238</td>\n",
+       "      <td>Civil War</td>\n",
+       "      <td>After a horrific tragedy raises questions on w...</td>\n",
+       "      <td>101</td>\n",
+       "      <td>[Luke Cage, Spider-Woman (Jessica Drew), She-H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>302</td>\n",
+       "      <td>Fear Itself</td>\n",
+       "      <td>The Serpent, God of Fear and brother to the Al...</td>\n",
+       "      <td>151</td>\n",
+       "      <td>[Hawkeye, Luke Cage, Spider-Woman (Jessica Dre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>315</td>\n",
+       "      <td>Infinity</td>\n",
+       "      <td>While the most powerful Avengers journey into ...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>[Hawkeye, Luke Cage, Spider-Woman (Jessica Dre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>317</td>\n",
+       "      <td>Inhumanity</td>\n",
+       "      <td>Following Infinity, the actions of Black Bolt ...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>[Luke Cage, Spider-Woman (Jessica Drew), Namor]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Maximum Security</td>\n",
+       "      <td>At a meeting of the Shi'Ar intergalactic counc...</td>\n",
+       "      <td>73</td>\n",
+       "      <td>[Hawkeye, She-Hulk (Jennifer Walters), Scarlet...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>319</td>\n",
+       "      <td>Original Sin</td>\n",
+       "      <td>Earth's Mightiest Heroes discover Uatu, the Wa...</td>\n",
+       "      <td>37</td>\n",
+       "      <td>[Scarlet Witch]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>266</td>\n",
+       "      <td>Other - Evolve or Die</td>\n",
+       "      <td>Just as Spider-Man discovers he's dying from a...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>[Luke Cage, Spider-Woman (Jessica Drew)]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>269</td>\n",
+       "      <td>Secret Invasion</td>\n",
+       "      <td>The shape-shifting Skrulls have been infiltrat...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>[Luke Cage, Spider-Woman (Jessica Drew), She-H...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Event #            Event Title  \\\n",
+       "0      238              Civil War   \n",
+       "1      302            Fear Itself   \n",
+       "2      315               Infinity   \n",
+       "3      317             Inhumanity   \n",
+       "4       37       Maximum Security   \n",
+       "5      319           Original Sin   \n",
+       "6      266  Other - Evolve or Die   \n",
+       "7      269        Secret Invasion   \n",
+       "\n",
+       "                                   Event Description  # Chars in Event  \\\n",
+       "0  After a horrific tragedy raises questions on w...               101   \n",
+       "1  The Serpent, God of Fear and brother to the Al...               151   \n",
+       "2  While the most powerful Avengers journey into ...                36   \n",
+       "3  Following Infinity, the actions of Black Bolt ...                37   \n",
+       "4  At a meeting of the Shi'Ar intergalactic counc...                73   \n",
+       "5  Earth's Mightiest Heroes discover Uatu, the Wa...                37   \n",
+       "6  Just as Spider-Man discovers he's dying from a...                17   \n",
+       "7  The shape-shifting Skrulls have been infiltrat...               100   \n",
+       "\n",
+       "                                           Top Chars  \n",
+       "0  [Luke Cage, Spider-Woman (Jessica Drew), She-H...  \n",
+       "1  [Hawkeye, Luke Cage, Spider-Woman (Jessica Dre...  \n",
+       "2  [Hawkeye, Luke Cage, Spider-Woman (Jessica Dre...  \n",
+       "3    [Luke Cage, Spider-Woman (Jessica Drew), Namor]  \n",
+       "4  [Hawkeye, She-Hulk (Jennifer Walters), Scarlet...  \n",
+       "5                                    [Scarlet Witch]  \n",
+       "6           [Luke Cage, Spider-Woman (Jessica Drew)]  \n",
+       "7  [Luke Cage, Spider-Woman (Jessica Drew), She-H...  "
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Combo = pd.DataFrame({\"Event\":eventlist,\n",
+    "                     \"Char\": namelist})\n",
+    "TopCharsbyEvent = Combo.groupby(\"Event\")[\"Char\"].unique()\n",
+    "finallist = []\n",
+    "for event in Top8Events:\n",
+    "    finallist.append(TopCharsbyEvent.loc[event].tolist())\n",
+    "print(finallist)\n",
+    "# a = TopCharsbyEvent[37].tolist()\n",
+    "# print(a)\n",
+    "EightEvent\n",
+    "EightEvent[\"Top Chars\"] = finallist\n",
+    "EightEvent"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {
     "scrolled": true
