Updated 2 main jupyter notebooks through question 2. Put paul's working files in their own directory.

--- a/Paul Working Files/MarvelAPI.ipynb
+++ b/Paul Working Files/MarvelAPI.ipynb
@@ -1304,7 +1304,7 @@
     }
    ],
    "source": [
-    "# Bar chart of top 5/10 characters and number events they're in\n",
+    "# Bar chart of top 10 characters and number events they're in\n",
     "Top10Chars = TopChars[0:10] # Creates a Pandas Series of characters top 10 in event rank\n",
     "Top10Chars = Top10Chars.sort_index()\n",
     "TopCharChart = Top10Chars.plot(kind = 'bar')\n",
@@ -1440,106 +1440,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Event Count</th>\n",
-       "      <th>Overlaps w/ Big 4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Hawkeye</th>\n",
-       "      <td>14</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hercules</th>\n",
-       "      <td>11</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Luke Cage</th>\n",
-       "      <td>13</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Namor</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Scarlet Witch</th>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>She-Hulk</th>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spider-Woman</th>\n",
-       "      <td>12</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tigra</th>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vision</th>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wasp</th>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Event Count  Overlaps w/ Big 4\n",
-       "Hawkeye                 14                  3\n",
-       "Hercules                11                  6\n",
-       "Luke Cage               13                  6\n",
-       "Namor                   12                  4\n",
-       "Scarlet Witch           11                  5\n",
-       "She-Hulk                12                  3\n",
-       "Spider-Woman            12                  4\n",
-       "Tigra                   11                  5\n",
-       "Vision                  11                  3\n",
-       "Wasp                    11                  3"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Top10Chars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-5b191bb40c6e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m TenCharDF = pd.DataFrame({\"Event Count\":Top10Chars,\n\u001b[0m\u001b[0;32m      2\u001b[0m                          \"Overlaps w/ Big 4\": OverlapLens})\n\u001b[0;32m      3\u001b[0m \u001b[0mTenCharDF\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTenCharDF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Rename characters with complex names for visual clarity\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mTenCharDF\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTenCharDF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"She-Hulk (Jennifer Walters)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"She-Hulk\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Top10Chars' is not defined"
+     ]
     }
    ],
    "source": [
