beginning work on part 3

--- a/Final Data Analysis.ipynb
+++ b/Final Data Analysis.ipynb
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 2 Data: Which characters interact with each other in the Marvel Universe?"
+    "## Question 2 Analysis: Which characters interact with each other in the Marvel Universe?"
    ]
   },
   {
@@ -631,6 +631,13 @@
     "***Analysis***: Based on our criteria, Fear Itself is far and away the best event to feature in a movie, as it has significantly the most characters in it and the most top characters, especially considering other events that have been referenced in previous films (Civil War; Infinity). Per our DataFrame, we know that 9 of our 10 candidates are in this event, including our Marvel Star pick, Namor.\n",
     "\n",
     "Our-in-house comic experts will choose a storyline from the ***Fear Itself*** event to make into a movie, which should heavily feature Namor as a lead-in to his own starring role in a future film. We should probably give brief cameos to our other top candidates like Hawkeye and Spider-Woman as well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3 Analysis: What would comprise a successful movie release strategy?"
    ]
   },
   {
