--- a/Marvelous Data Miners - Data Exploration.ipynb
+++ b/Marvelous Data Miners - Data Exploration.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'g_keypa' from 'groupkeys' (C:\\Users\\littl\\Desktop\\Bootcamp In Process HW\\marvel-star\\groupkeys.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-106-d67a67475f52>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mus\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m# import api keys for Marvel API, Census, and GMaps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgroupkeys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpublic\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprivate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mg_keypa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcensus_keypa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCensus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcensus_keypa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myear\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2018\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'g_keypa' from 'groupkeys' (C:\\Users\\littl\\Desktop\\Bootcamp In Process HW\\marvel-star\\groupkeys.py)"
+     ]
+    }
+   ],
    "source": [
     "# import dependencies\n",
     "import pandas as pd\n",
@@ -21,8 +33,12 @@
     "import requests \n",
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud, STOPWORDS\n",
+    "import gmaps\n",
+    "from census import Census \n",
+    "from us import states\n",
     "# import api keys for Marvel API, Census, and GMaps\n",
-    "from groupkeys import public, private\n"
+    "from groupkeys import public, private, g_keypa, census_keypa\n",
+    "c = Census(census_keypa, year=2018)\n"
    ]
   },
   {
@@ -2323,6 +2339,13 @@
     "EightEventShort = EightEvent.copy()\n",
     "EightEventShort = EightEventShort.drop(columns={\"Event #\",\"Event Description\",\"Top Chars\"})\n",
     "EightEventShort.to_csv(\"marvel_files/EightEventShort.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3 Data: What would comprise a successful movie release strategy?"
    ]
   },
   {
