made minor tweaks to jupyter files

--- a/Final Data Analysis - Marvelous Data Miners.ipynb
+++ b/Final Data Analysis - Marvelous Data Miners.ipynb
@@ -435,6 +435,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Insight:*** The above WordCloud represents each of the 74 comic events weighted by the amount of characters in each event. It would appear that the leading candidates for the next movie event would be Fear Itself, Dark Reign, Acts of Vengeance!, or Civil War. We also note that there are many X-Men themed events that we may need to remove from the population."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -663,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -713,12 +720,13 @@
     "x = np.linspace(xmin, xmax, 500)\n",
     "p = norm.pdf(x, avg_age, sd_age)\n",
     "plt.plot(x, p, 'k', linewidth=2, color='r')\n",
-    "plt.savefig(\"marvel_files/Age_distribution.png\")"
+    "plt.savefig(\"marvel_files/Age_distribution.png\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -746,12 +754,13 @@
     "x = np.linspace(xmin, xmax, 500)\n",
     "p_pop = norm.pdf(x, avg_pop, sd_pop)\n",
     "plt.plot(x, p_pop, 'k', linewidth=2, color='r')\n",
-    "plt.savefig(\"marvel_files/Population_distribution.png\")"
+    "plt.savefig(\"marvel_files/Population_distribution.png\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -765,18 +774,10 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
+    "plt.figure()\n",
     "plt.hist(census[\"Household Income\"], density=True, edgecolor = 'black')\n",
     "#plt.title(\"Income\") #Assign title \n",
     "plt.xlabel(\"Income\") #Assign x label \n",
@@ -786,8 +787,8 @@
     "x = np.linspace(xmin, xmax, 500)\n",
     "p_inc = norm.pdf(x, avg_inc, sd_inc)\n",
     "plt.plot(x, p_inc, 'k', linewidth=2, color='r')\n",
-    "plt.show()\n",
-    "plt.savefig(\"marvel_files/Income_distribution.png\")"
+    "plt.savefig(\"marvel_files/Income_distribution.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -917,7 +918,6 @@
     "fig.add_layer(heat_layer_inc )\n",
     "fig.add_layer(markers)\n",
     "# Display figure\n",
-    "plt.savefig(\"marvel_files/Heatmap.png\")\n",
     "fig"
    ]
   },
