Slight changes to analysis file

--- a/Final Data Analysis - Marvelous Data Miners.ipynb
+++ b/Final Data Analysis - Marvelous Data Miners.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "22         5.0       112  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -391,6 +391,7 @@
     "EarnBar.set_ylabel(\"Box Office (in USD millions)\", fontsize = 15, color = \"black\")\n",
     "EarnBar.set_xlabel(\"Movie Title\", fontsize = 15, color = \"black\")\n",
     "EarnBar.set_title(\"Box Office Returns by Title\", fontsize = 15, color = \"black\")\n",
+    "plt.savefig(\"marvel_files/boxoffice.png\")\n",
     "plt.show()"
    ]
   },
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +541,7 @@
        "Wasp                    11                  3"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,8 +555,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +635,7 @@
     "EightEventPlot.tick_params(colors = \"black\")\n",
     "EightEventPlot.set_title(\"Characters and Top Candidates by Event\", fontsize = 15, color = \"black\")\n",
     "EightEventPlot.set_facecolor(\"white\")\n",
-    "plt.savefig(\"marvel_files/CharBar.png\")\n",
+    "plt.savefig(\"marvel_files/EventBar.png\")\n",
     "plt.show()"
    ]
   },
